Prevent wrapper around project from becoming too short

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -24,6 +24,7 @@ body {
 	position: relative;
 	list-style-type: none;
 	padding: 10px 10px 10px 164px;
+	min-height: 110px;
 
 	.project-title {
 		font-weight: bold;
